--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -5,23 +5,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="csrf-token" content="<%= csrfToken %>" />
     <link href="./css/styles.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Todo Manager</title>
+    <script>
+        var token = document
+            .querySelector('meta[name="csrf-token"]')
+            .getAttribute("content")
+        
+        function updateTodo(id) {
+            fetch(`/todos/${id}/markAsCompleted`, {
+                method: "put",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({
+                    "_csrf": token
+                })
+            }).then((res) => {
+                if (res.ok) {
+                    console.log("OKkkkkkkkkkay")
+                    window.location.reload();
+                }
+            }).catch((error) => console.log(error));
+        }
+        function deleteTodo(id) {
+            console.log("Delte invoked")
+            fetch(`/todos/${id}`, {
+                method: "delete",
+                headers: {
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify({
+                    "_csrf": token
+                })
+            }).then((res) => {
+                if (res.ok) {
+                    console.log("Delete OKkkkkkkkkkay")
+                    window.location.reload();
+                }
+            }).catch((error) => console.log(erorr));
+        }
+    </script>
 </head>
 
 <body>
     <div class="grid grid-cols-6">
         <div class="col-start-3 col-span-2">
             <%- include('header.ejs') %>
-            <form action="">
+            <form action="/todos" method="post">
+                <input type="hidden" name="_csrf" value="<%= csrfToken %>"/>
                 <div class="flex gap-2  py-4">
                     <div class="flex-auto">
-                        <input type="text" placeholder="What's next?"
+                        <input type="text" name="title" placeholder="What's next?"
                             class="border border-grey-300 rounded text-grey-900 w-full p-2 text-sm">
                     </div>
                     <div class="flex-auto">
-                        <input type="date" class="border border-grey-300 rounded text-grey-900 p-2 text-sm 1-rem">
+                        <input type="date" name="dueDate" class="border border-grey-300 rounded text-grey-900 p-2 text-sm 1-rem">
                     </div>
                     <div class="flex-none">
                         <button type="submit"
