--- a/todo-app/views/todos.ejs
+++ b/todo-app/views/todos.ejs
@@ -6,12 +6,17 @@
       <% for (let i = 0; i < todos.length; i++) { %>
         <li class="Todo-Item">
             <div class="flex item-center w-fit my-2 px-2 py-1 hover:bg-purple-50 rounded">
-                <input class="<%='todo-checkbox-'+(i+1)%>" type="checkbox"
-                    class="w-4 h-4 text-blue-600 bg-grey-100 rounded border-grey-600">
-                <label for="<%='todo-checkbox-'+(i+1)%>" class="ml-2 text-sm text-grey-600 cursor-pointer ">
+                <input id="todo-checkbox-<%= todos[i].id %>" type="checkbox" 
+                        <%=todos[i].completed ? "checked" : "" %>
+                        onclick="updateTodo(<%= todos[i].id %>)"
+                        class="w-4 h-4 text-blue-600 bg-grey-100 rounded border-grey-600">
+                <label for="todo-checkbox-<%= todos[i].id %>" class="ml-2 text-sm text-grey-600 cursor-pointer ">
                     <%= todos[i].title %>  
                 </label>
-                <a href="#" class="hidden trash-icon ml-2">
+                <a href="#" 
+                    onclick="deleteTodo(<%= todos[i].id %>)"
+                    class="hidden trash-icon ml-2"
+                >
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                     stroke="currentColor" class="w-4 h-4">
                     <path stroke-linecap="round" stroke-linejoin="round"
