Level 10 Last update: (I hope) signp and login csrf token fixed tests added for signup and sign in added routes additional

--- a/todo-app/public/css/styles.css
+++ b/todo-app/public/css/styles.css
@@ -11,7 +11,7 @@ td {
     text-align: center;
 }
 
-.Todo-Item:hover .trash-icon {
+.Todo-item:hover .trash-icon {
     display: block;
     margin-left: 24px;
 }
