--- a/todo-app/views/todo.ejs
+++ b/todo-app/views/todo.ejs
@@ -10,7 +10,7 @@
         <div class="flex items-center w-fit my-2 px-2 py-1 ">
           <input id="todo-checkbox-<%=todos[i].id%>" type="checkbox" class="h-4 w-4 text-blue-600 bg-gray-100 rounded border-gray" 
           <%=todos[i].completed ? "checked" : "" %>
-          onclick="updateTodoAsComplete(<%= todos[i].id %>)"
+          onclick="updateTodo(<%= todos[i].id %>)"
           />
           <label for="todo-checkbox-<%=todos[i].id%>" class=" ml-2 text-sm text-gray-600 cursor-pointer">
             <%= todos[i].title%>
