--- a/todo-app/views/signup.ejs
+++ b/todo-app/views/signup.ejs
@@ -39,7 +39,7 @@
                 <div class="py-3">
                     <button type="submit" class="bg-red-600 hover:bg-red-800 text-white px-5 py-1.5 rounded font-medium mr-2 mb-2">Sign up</button>
                 </div>
-             </form><%- include("footer.ejs") %>
+             </form>
              <% if(messages && messages.error && messages.error.length > 0)  { %>
                 <% for(var i=0; i<messages.error.length; i++) { %>
                   <h5 class="inline-block px-2 py-1 mx-2 my-1 rounded bg-red-200 text-red-600 border border-red-400">
